# whatthecommit-cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: commit_messages.txt  main.rs  names.txt
